for text allignment

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
 </div><div id="ee046105-b879-49f1-af21-7d35b31cecb6" class="group_ee046105-b879-49f1-af21-7d35b31cecb6 page-content__component-group" data-type="group">
   
-      <div class="page-content__component text_fc2fa9cb-2d43-4762-9597-5c697d1fdfbd" data-container="grid" id="fc2fa9cb-2d43-4762-9597-5c697d1fdfbd" data-type="text"><div data-wysiwyg="true">Job Openings</div></div><div data-unit="px" class="page-content__component rectangle_803b3e99-6649-4bc8-a882-05137d02ac7a" data-container="grid" id="803b3e99-6649-4bc8-a882-05137d02ac7a" data-type="rectangle">
+      <div class="page-content__component text_fc2fa9cb-2d43-4762-9597-5c697d1fdfbd" data-container="grid" id="fc2fa9cb-2d43-4762-9597-5c697d1fdfbd" data-type="text"></div><div data-unit="px" class="page-content__component rectangle_803b3e99-6649-4bc8-a882-05137d02ac7a" data-container="grid" id="803b3e99-6649-4bc8-a882-05137d02ac7a" data-type="rectangle">
   <div class="strw-shape"></div>
   
 </div><div id="d2da1aff-c57a-4899-9f6e-517e184458df" class="group_d2da1aff-c57a-4899-9f6e-517e184458df page-content__component-group" data-type="group">
@@ -2360,13 +2360,13 @@ s</div></div><div class="page-content__component text_ec602959-e231-4c09-99e9-13
 </div><div data-unit="px" class="page-content__component rectangle_52d191af-0226-4a6d-afe9-d4d93574c723" data-container="grid" id="52d191af-0226-4a6d-afe9-d4d93574c723" data-type="rectangle">
   <div class="strw-shape"></div>
   
-</div><div class="page-content__component text_525b4379-2c1a-41e6-b845-fb2f076b75c5" data-container="grid" id="525b4379-2c1a-41e6-b845-fb2f076b75c5" data-type="text"><div data-wysiwyg="true">Latest Openings</div></div><div class="page-content__component text_498a19b0-15e9-4896-8c10-a94cabc67abc" data-container="grid" id="498a19b0-15e9-4896-8c10-a94cabc67abc" data-type="text"><div data-wysiwyg="true">Frontend Developer</div></div><div class="page-content__component text_888ec086-73ed-4981-ad00-1ac9b8e66077" data-container="grid" id="888ec086-73ed-4981-ad00-1ac9b8e66077" data-type="text"><div data-wysiwyg="true">Pune</div></div><div data-unit="px" class="page-content__component rectangle_fcfc24dc-b6b7-42be-8885-6dd18c312289" data-container="grid" id="fcfc24dc-b6b7-42be-8885-6dd18c312289" data-type="rectangle">
+</div><div class="page-content__component text_525b4379-2c1a-41e6-b845-fb2f076b75c5" data-container="grid" id="525b4379-2c1a-41e6-b845-fb2f076b75c5" data-type="text"><div data-wysiwyg="true">Latest Openings </div></div><div class="page-content__component text_498a19b0-15e9-4896-8c10-a94cabc67abc" data-container="grid" id="498a19b0-15e9-4896-8c10-a94cabc67abc" data-type="text"><div data-wysiwyg="true">Frontend Developer</div></div><div class="page-content__component text_888ec086-73ed-4981-ad00-1ac9b8e66077" data-container="grid" id="888ec086-73ed-4981-ad00-1ac9b8e66077" data-type="text"><div data-wysiwyg="true">Pune</div></div><div data-unit="px" class="page-content__component rectangle_fcfc24dc-b6b7-42be-8885-6dd18c312289" data-container="grid" id="fcfc24dc-b6b7-42be-8885-6dd18c312289" data-type="rectangle">
   <div class="strw-shape"></div>
   
-</div><div class="page-content__component text_3a746311-1206-4eb9-913b-c1680cc9517a" data-container="grid" id="3a746311-1206-4eb9-913b-c1680cc9517a" data-type="text"><div data-wysiwyg="true">Looking for A Trusted Partner?
+</div><div class="page-content__component text_3a746311-1206-4eb9-913b-c1680cc9517a" data-container="grid" id="3a746311-1206-4eb9-913b-c1680cc9517a" data-type="text"><div data-wysiwyg="true" style="white-space:nowrap">Looking for A Trusted Partner?
 <br class="nl-desktop"></div></div><div class="page-content__component text_16519e00-d62f-43e2-858a-b89d51ee29d6" data-container="grid" id="16519e00-d62f-43e2-858a-b89d51ee29d6" data-type="text"><div data-wysiwyg="true" style="
     white-space: nowrap;
-">Our Awesome HR Outsourcing Services</div></div><div class="page-content__component text_789094c8-8fac-4949-9b14-076216e1ec9e" data-container="grid" id="789094c8-8fac-4949-9b14-076216e1ec9e" data-type="text"><div data-wysiwyg="true">contact US</div></div><div class="page-content__component text_7a6a8b11-e654-4274-b20e-6c5cc78529d5" data-container="grid" id="7a6a8b11-e654-4274-b20e-6c5cc78529d5" data-type="text"><div data-wysiwyg="true" style="
+">Our Awesome HR Outsourcing Services</div></div><div class="page-content__component text_789094c8-8fac-4949-9b14-076216e1ec9e" data-container="grid" id="789094c8-8fac-4949-9b14-076216e1ec9e" data-type="text"><div data-wysiwyg="true" style="white-space:nowrap">contact US</div></div><div class="page-content__component text_7a6a8b11-e654-4274-b20e-6c5cc78529d5" data-container="grid" id="7a6a8b11-e654-4274-b20e-6c5cc78529d5" data-type="text"><div data-wysiwyg="true" style="
     white-space: nowrap;
 ">HR outsourcing services</div></div><div class="page-content__component text_b5dcc91c-e268-4592-88e3-df0ef451ef6d" data-container="grid" id="b5dcc91c-e268-4592-88e3-df0ef451ef6d" data-type="text"><div data-wysiwyg="true">jobs</div></div><div id="e5c5170e-35f8-4095-a925-0e1fe3daa153" class="group_e5c5170e-35f8-4095-a925-0e1fe3daa153 page-content__component-group" data-type="group">
   
@@ -2553,7 +2553,6 @@ s</div></div><div class="page-content__component text_ec602959-e231-4c09-99e9-13
 </div><div id="421f0233-dd69-44a7-8e6a-4b065d69f598" class="group_421f0233-dd69-44a7-8e6a-4b065d69f598 page-content__component-group" data-type="group">
   
       <div title="" data-unit="px" data-container="grid" id="1b52d4ed-3646-4cbd-9136-6af15b14c847" data-type="image" class="page-content__component image_1b52d4ed-3646-4cbd-9136-6af15b14c847" data-bg="image" style="background-image:url(&#39;https://cdn.siter.io/assets/ast_kZP8kQsx37wxv3UHizSJnFNHk/3993afdb-f7ff-4b95-9e07-af486f37fc34.svg&#39;);">
-  <img class="str-img" src="./Find Experts_files/3993afdb-f7ff-4b95-9e07-af486f37fc34.svg" alt="" style="opacity: 0">
   <div class="strw-shape"></div>
   
 </div><style>.image_1b52d4ed-3646-4cbd-9136-6af15b14c847:before {
